<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/musicbg">
	<LinearLayout android:id="@+id/configpanel"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textSize="30sp"
			android:text="@string/appname" />
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:text="@string/commandoptions"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
			<Spinner android:id="@+id/commandchoice"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
			<Button android:id="@+id/backbutton" android:text="@string/backbutton"
				android:layout_weight="1" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<Button android:id="@+id/okbutton" android:text="@string/okbutton"
				android:layout_weight="1" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
